--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "export-user-data",
-	"version": "2.2.2",
-	"description": "Q Plugins ~ Export User data and metadata",
+	"name": "export-user-data-kn-edit",
+	"version": "2.2.2.1",
+	"description": "Q Plugins ~ Export User data and metadata - KN edit",
 	"author": "Q Studio",
 	"homepage": "https://qstudio.us",
 	"repository": {
 		"type": "git",
-		"url": "qstudio/export-user-data"
+		"url": "https://github.com/KyleNumann/export-user-data"
 	},
 	"license": "GPL-3.0-or-later"
 }
